# py_single_file_storage

./: README.md  pyproject.toml
py_single_file_storage/: __init__.py  main.py
