[project]
name = "py-single-file-storage"
version = "0.1.0"
description = "Store some information within the current .py file for the distribution of a single-source-file Python application."
authors = [
    {name = "GGN_2015",email = "neko@jlulug.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "filelock"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
